--- a/WireLost/mapping/templates/mapping/index.html
+++ b/WireLost/mapping/templates/mapping/index.html
@@ -1,6 +1,51 @@
-<div style="font:80px Trebuchet MS;text-align:center;width:100%">WireLost</div>
-<div style="position:relative;margin:auto;width:800px;height:650px;border-radius:3px;border-style: solid;">
-	{% for node in locs %}
-	        <div style="text-align:center;position:absolute;width:20;height:20;background-color:black;color:white;left:{{node.1.0}}px;top:{{node.1.1}}px">{{node.0}}</div>
-	{% endfor %}
-</div>
+<!DOCTYPE html>
+<html>
+	<style>
+		#title
+		{
+			font:80px Trebuchet MS;
+			text-align:center;
+			width:100%;
+		}
+
+		#container
+		{
+			position:relative;
+			margin:auto;
+			width:800px;
+			height:650px;
+			border-radius:3px;
+			border-style: solid;
+			box-shadow: 5px 10px #888888;
+		}
+
+		#node
+		{
+			text-align:center;
+			position:absolute;
+			width:40px;
+			height:40px;
+			background-color:black;
+			color:white;
+			border-radius:10px;
+			vertical-align: middle;
+			line-height: 40px;
+		}
+	</style>
+	<body>
+		<script>
+				function getLocs() {
+					location.reload();
+				}
+
+				setInterval(getLocs, 500);
+		</script>
+
+		<div id="title">WireLost</div>
+		<div id="container">
+			{% for node in locs %}
+					<div id="node" style="left:{{node.1.0}}px;top:{{node.1.1}}px">{{node.0}}</div>
+			{% endfor %}
+		</div>
+	</body>
+</html>
